# gamechooser2

./: .gitignore  build_wasm_and_serve.bat  build_wasm_and_serve.sh  gamechooser2.sublime-project  notes.md
cli-test/: Cargo.toml
cli-test/src/: main.rs
cli_client/: Cargo.toml
cli_client/src/: main.rs
client/: build_wasm.bat  build_wasm.sh  randomize_mockup.html  test_wasm.html
client/rs/: Cargo.toml
client/rs/src/: game_card.rs  lib.rs  server_api.rs  session_card.rs  stats.rs  web.rs
client/served_files/: app.html  randomize_mockup.html  search_igdb.html  styles.css  test_wasm.html
gamechooser-core/: Cargo.toml
gamechooser-core/src/: collection_game_filter.rs  config.rs  database_v2.rs  database_v3.rs  lib.rs
igdb_api_client/: Cargo.toml
igdb_api_client/src/: lib.rs
importer/: Cargo.toml
importer/src/: main.rs
server/: Cargo.toml  database.json
server/src/: main.rs
