[package]
name = "cli_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.7"
async-trait = "0.1"
futures = "0.3"
confy = "0.4"
gamechooser-core = { path = "../gamechooser-core" }
reqwest = { version = "0.11.10" , features=["blocking", "json"] }
serde = { version = "1.0", features=["derive"] }
