[package]
name = "importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.7"
chrono = { version = "0.4", features=["serde"] }
confy = "0.4"
csv = "1.1"
tokio = { version = "1.17", features=["macros", "rt"] }
gamechooser-core = { path = "../gamechooser-core" }
igdb_api_client = { path = "../igdb_api_client" }
reqwest = { version = "0.11.10" , features=["blocking", "json"] }
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
