[package]
name = "gamechooser2-client"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", features=["serde", "wasmbind"] }
console_error_panic_hook = "0.1.7"
gamechooser-core = { path = "../../gamechooser-core" }
js-sys = "0.3"
once_cell = "1.10"
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.29"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'CssStyleDeclaration',
  'Document',
  'Headers',
  'HtmlAnchorElement',
  'HtmlButtonElement',
  'HtmlDivElement',
  'HtmlElement',
  'HtmlImageElement',
  'HtmlInputElement',
  'HtmlLabelElement',
  'HtmlLiElement',
  'HtmlParagraphElement',
  'HtmlSelectElement',
  'HtmlSpanElement',
  'HtmlUListElement',
  'Location',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Storage',
  'Window',
]
