[package]
name = "gamechooser2-client"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", features=["serde", "wasmbind"] }
console_error_panic_hook = "0.1.7"
gamechooser-core = { path = "../../gamechooser-core" }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
once_cell = "1.10"
rand = { version = "0.8.5" }
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.29"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'Headers',
  'HtmlAnchorElement',
  'HtmlButtonElement',
  'HtmlDivElement',
  'HtmlElement',
  'HtmlImageElement',
  'HtmlInputElement',
  'HtmlLabelElement',
  'HtmlLiElement',
  'HtmlParagraphElement',
  'HtmlSelectElement',
  'HtmlSpanElement',
  'HtmlUListElement',
  'Location',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Storage',
  'SvgElement',
  'SvgRectElement',
  'Window',
]
